# language

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  argparse.hpp  build.py  main-jit.cpp  main.cpp  output.txt  test.txt  tests.py
examples/: cat.pr  cat.qr  enums.pr  fib.pr  fib.qr  read_file_contents  read_file_contents.pr  rule110.pr  rule110.qr
include/: builtins.h  compiler.h  include.h  jit.h  llvm.h  mangler.h  objects.h  preprocessor.h  utils.h  visitor.h
include/lexer/: lexer.h  tokens.h
include/objects/: enums.h  functions.h  modules.h  namespaces.h  scopes.h  structs.h  typealias.h  types.h  values.h  variables.h
include/parser/: ast.h  attrs.h  parser.h
include/quart/: assert.h  builtins.h  cl.h  common.h  compiler.h  debug.h  errors.h  filesystem.h  format.h  jit.h  language.h  lexer.h  llvm.h  logging.h  macros.h  mangler.h  objects.h  parser.h  source_code.h  temporary_change.h  utils.h  visitor.h
include/types/: array.h  function.h  include.h  pointer.h  struct.h  tuple.h  type.h
include/utils/: filesystem.h  log.h  pointer.h  string.h  utils.h
lib/: panic.c
lib/libc/: errno.pr  errno.qr  ffi.pr  include.pr  linux.pr  linux.qr  module.pr  module.qr  socket.qr
lib/std/: io.pr  io.qr  range.qr  str.qr  string.qr
quart/: assert.cpp  assert.h  casting.h  cl.cpp  cl.h  common.h  compiler.cpp  compiler.h  errors.h  filesystem.cpp  filesystem.h  format.cpp  format.h  jit.cpp  jit.h  llvm.h  main.cpp  source_code.cpp  source_code.h  stacktrace.cpp  stacktrace.h  target.cpp  target.h
quart/attributes/: attributes.cpp  attributes.h  parser.cpp  parser.h
quart/bytecode/: ast.cpp  basic_block.cpp  basic_block.h  generator.cpp  generator.h  instruction.cpp  instruction.h  operand.cpp  operand.h  pass.cpp  pass.h  register.h
quart/codegen/: codegen.cpp  codegen.h  llvm.cpp  llvm.h
quart/language/: constants.cpp  constants.h  consteval.cpp  consteval.h  context.cpp  context.h  enums.cpp  enums.h  functions.cpp  functions.h  generics.h  impl.cpp  impl.h  modules.cpp  modules.h  scopes.cpp  scopes.h  state.cpp  state.h  structs.cpp  structs.h  symbol.cpp  symbol.h  trait.cpp  trait.h  type_alias.cpp  type_alias.h  type_checker.cpp  type_checker.h  type_registry.cpp  type_registry.h  types.cpp  (+4 more)
rust/: .gitignore  Cargo.toml  build.rs
src/: assert.cpp  ast.cpp  ast.h  builtins.cpp  cl.cpp  compiler.cpp  debug.cpp  filesystem.cpp  format.cpp  include.h  jit.cpp  lexer.cpp  lexer.h  llvm.h  logging.cpp  main.cpp  mangler.cpp  objects.cpp  objects.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  source_code.cpp  tokens.cpp  tokens.h  tokens.hpp  types.cpp  types.h  types.hpp  utils.cpp  utils.h  utils.hpp  values.cpp  values.h  visitor.cpp  visitor.h
(+160 files in other folders)
